# NEP-kappa

./: .gitignore  .readthedocs.yaml  README.md  input.txt  input_1.txt  input_2.txt  input_template.txt  main.py  nep_phonon.py  nepkappa.py  plot.py  pyproject.toml  read_kappa.py  workflow.py
Example-Results/Bulk/: plot_bulk.py
Example-Results/Film-1nm/: POSCAR  Si_2025_Xuke.txt  plot_film.py
Example-Resuts/Bulk/: plot_bulk.py
Example-Resuts/Film-1nm/: plot_film.py
Structure/: POSCAR  build_and_relax_prim.py
docs/: make.bat
docs/source/: api.rst  conf.py  example_plots.rst  index.rst  input_files.rst  installation.rst  introduction.rst  overview.rst  quickstart.rst  reference.rst  requirements.rst  starting.rst  structure_builder.rst  troubleshooting.rst  tutorial.rst
examples/: 1-bulk-nep-rta.yaml  2-bulk-nep-hiphive-rta.yaml  3-bulk-nep-lbte.yaml  4-bulk-nep-rta-wigner.yaml  5-bulk-vasp-rta.yaml  6-bulk-vasp-hiphive-rta.yaml  7-film-nep-hiphive-rta.yaml  7-film-nep-rta.yaml  8-film-nep-hiphive-rta.yaml  POSCAR_bulk  compare.yaml
examples-input/: POSCAR_film  input_1-bulk-nep-rta.yaml  input_2-bulk-nep-hiphive-rta.yaml  input_3-bulk-nep-lbte.yaml  input_4-bulk-nep-rta-wigner.yaml  input_5-bulk-vasp-rta.yaml  input_6-bulk-vasp-hiphive-rta.yaml  input_7-film-nep-hiphive-rta.yaml
potentials/: Si_Bulk_Fan.txt
src/nepkappa/: __init__.py  __main__.py  cli.py  config.py  plot.py  workflow.py
src/nepkappa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_config.py  test_plot.py  test_workflow.py
(+4 files in other folders)
